--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <div id="root" class="w-screen h-screen flex justify-center items-center  "></div>
+  <div id="root"
+    class="w-screen h-screen flex justify-center items-center bg-backgroundApp bg-no-repeat bg-cover bg-center">
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
