FEAT: Criado um hook para facilitar o gerenciamento de tradução e criado uma função para inverter idiomas

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-  <div id="root"
-    class="w-screen h-screen flex justify-center items-center bg-backgroundApp bg-no-repeat bg-cover bg-center">
+  <div id="root" class="w-screen h-screen flex justify-center items-center bg-bgApp bg-no-repeat bg-cover bg-center">
   </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
